--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,11 +8,13 @@
         "plugin:react/recommended",
         "plugin:prettier/recommended"
     ],
+
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "plugins": ["react"],
+    "parser": "@babel/eslint-parser",
     "rules": {
         "prettier/prettier": [
             "warn",
@@ -20,6 +22,7 @@
                 "endOfLine": "auto"
             }
         ],
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "strict": 0
     }
 }
