--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "jsxSingleQuote": false,
     "bracketSpacing": false,
-    "trailingComma": "all",
-    "printWidth": 80,
-    "tabWidth": 4,
+    "trailingComma": "es5",
+    "printWidth": 120,
+    "tabWidth": 2,
     "arrowParens": "avoid",
     "endOfLine": "lf"
 }
